objects/HealthCloudGA__ProgramPatientSummary__c.object
<CustomObject>
    <description>This is the object that will house our Patient&apos;s program summary (CCM, RiskScore)</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Patient Summary</relationshipLabel>
        <relationshipName>ProgramPatientSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AgeBand__c</fullName>
        <description>Patient’s age calculated into age bands: 0 - 34,35-44,45-54,55-59,60-64,65-69,70-74,75-79,80-84,85-89,90-94, 95 and older.</description>
        <formula>IF(HealthCloudGA__Age__c &gt; 94, &quot;95 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old_Or_Over ,
IF(HealthCloudGA__Age__c &gt; 89, &quot;90-94 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 84,&quot;85-89 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 79,&quot;80-84 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 74,&quot;75-79 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 69, &quot;70-74 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 64,&quot;65-69 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 59, &quot;60-64 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 54, &quot;55-59 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 44, &quot;45-54 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 34, &quot;35-44 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &lt; 35, &quot;0-34 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old,$Label.HealthCloudGA__Formula_Label_Not_Applicable))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Patient’s age calculated into age bands: 0 - 34,35-44,45-54,55-59,60-64,65-69,70-74,75-79,80-84,85-89,90-94, 95 and older.</inlineHelpText>
        <label>Age Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <description>Patient Age.</description>
        <inlineHelpText>Patient Age.</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Conditions__c</fullName>
        <description>List of HCC condition categories applied to the patient.</description>
        <inlineHelpText>List of HCC condition categories applied to the patient.</inlineHelpText>
        <label>Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DisabilityStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CMS disability status.</description>
        <inlineHelpText>CMS disability status.</inlineHelpText>
        <label>Disability Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EffectiveDate__c</fullName>
        <description>Date the risk score was calculated.</description>
        <inlineHelpText>Date the risk score was calculated.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EnrollmentType__c</fullName>
        <description>Indicates the Medicare enrollment type for the patient.</description>
        <inlineHelpText>Indicates the Medicare enrollment type for the patient.</inlineHelpText>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>ESRD</fullName>
                </value>
                <value>
                    <fullName>FBDual</fullName>
                </value>
                <value>
                    <fullName>NonDual</fullName>
                </value>
                <value>
                    <fullName>PBDual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <description>Male/ Female</description>
        <inlineHelpText>Male/ Female</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HCCCodes__c</fullName>
        <description>The final HCC Codes that are applicable to the patient after applying the overriding logic.</description>
        <inlineHelpText>The final HCC Codes that are applicable to the patient after applying the overriding logic.</inlineHelpText>
        <label>HCC Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the patient is in an institution.</description>
        <inlineHelpText>Indicates whether the patient is in an institution.</inlineHelpText>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LowIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the patient falls within low income guidelines.</description>
        <inlineHelpText>Indicates whether the patient falls within low income guidelines.</inlineHelpText>
        <label>Low Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Month__c</fullName>
        <description>The month that the time calculation is applicable for.</description>
        <inlineHelpText>The month that the time calculation is applicable for.</inlineHelpText>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MostRecent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this record contains the most recent calculation for the measurement period.</description>
        <inlineHelpText>Indicates whether this record contains the most recent calculation for the measurement period.</inlineHelpText>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NewPatient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the patient is a new Medicare patient or a continued enrollee.</description>
        <inlineHelpText>Indicates whether the patient is a new Medicare patient or a continued enrollee.</inlineHelpText>
        <label>New Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NumberOfConditions__c</fullName>
        <description>Number of HCC condition categories that apply to the patient.</description>
        <inlineHelpText>Number of HCC condition categories that apply to the patient.</inlineHelpText>
        <label>Number of Conditions</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProgramPatientAffiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Patient Affiliation</label>
        <referenceTo>HealthCloudGA__ProgramPatientAffiliation__c</referenceTo>
        <relationshipLabel>Program Patient Summary</relationshipLabel>
        <relationshipName>ProgramPatientSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RiskScore__c</fullName>
        <description>HCC risk score calculated for the patient.</description>
        <inlineHelpText>HCC risk score calculated for the patient.</inlineHelpText>
        <label>Risk Score</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Stage__c</fullName>
        <description>Indicates the stage the patient is in for the Medicare CCM program.</description>
        <inlineHelpText>Indicates the stage the patient is in for the Medicare CCM program.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TimeSpent__c</fullName>
        <description>Total time spent with the patient in the measurement period for qualifying activities.</description>
        <inlineHelpText>Total time spent with the patient in the measurement period for qualifying activities.</inlineHelpText>
        <label>Time Spent</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Unique__c</fullName>
        <formula>Name&amp; HealthCloudGA__Year__c &amp; HealthCloudGA__Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Year__c</fullName>
        <description>Indicates the year the risk score is applicable to.</description>
        <inlineHelpText>Indicates the year the risk score is applicable to.</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Program Patient Summary</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Patient Summary</pluralLabel>
    <recordTypes>
        <fullName>HealthCloudGA__ChronicCareManagement</fullName>
        <active>true</active>
        <label>Chronic Care Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__RiskScoring</fullName>
        <active>true</active>
        <label>Risk Scoring</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>